init a ugly KdTree