@@ -5,12 +5,7 @@ Learn Groovy
 
 ```shell
 groovy -version       
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by org.codehaus.groovy.reflection.CachedClass (file:/usr/share/groovy/lib/groovy-2.4.21.jar) to method java.lang.Object.finalize()
-WARNING: Please consider reporting this to the maintainers of org.codehaus.groovy.reflection.CachedClass
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-Groovy Version: 2.4.21 JVM: 11.0.15 Vendor: Debian OS: Linux
+Groovy Version: 4.0.3 JVM: 11.0.15 Vendor: Debian OS: Linux
 ```
 
 ## Run
